--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -2,6 +2,12 @@ server {
     listen 80;
     server_name localhost;
 
+    # Add resolver for Docker's internal DNS
+    resolver 127.0.0.11 valid=10s;
+
+    # Set variables for backend
+    set $backend_service "http://backend:5000";
+
     location / {
         root /usr/share/nginx/html;
         index index.html;
@@ -10,11 +16,26 @@ server {
 
     # Proxy API requests to the backend
     location /api {
-        proxy_pass http://backend:5000;
+        proxy_pass $backend_service;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        
+        # Add timeouts and retries
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+        send_timeout 60s;
+        
+        # Handle errors
+        proxy_intercept_errors on;
+        error_page 500 502 503 504 /50x.html;
+    }
+
+    # Custom error page
+    location = /50x.html {
+        root /usr/share/nginx/html;
     }
 }
